--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -6,6 +6,7 @@
 /**/@import "modules/columns/columns";
 
 @import "modules/header/header";
+@import "modules/none/none";
 @import "modules/header-top/header-top";
 @import "modules/header-bottom/header-bottom";
 @import "modules/breadcrumbs/breadcrumbs";
