--- a/src/blocks/modules/header-top/header-top.scss
+++ b/src/blocks/modules/header-top/header-top.scss
@@ -2,11 +2,31 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	@include r(580) {
+		flex-wrap: wrap;
+	}
+	&__logo {
+		display: block;
+		@include r(580) {
+			order: -1;
+		}
+	}
+	&__logo-img {
+		height: rem(38);
+		width: auto;
+		display: block;
+	}
 	&__block {
 		display: flex;
 		align-items: center;
 		&--link {
 			text-decoration: none;
+			@include r(580) {
+				width: 100%;
+				justify-content: center;
+				padding-top: rem(16);
+				padding-bottom: rem(8);
+			}
 			&:hover {
 				opacity: 0.7;
 			}
@@ -24,6 +44,9 @@
 		padding: 4px;
 		border: none;
 		background: none;
+		@include r(580) {
+			order: -1;
+		}
 		svg {
 			display: block;
 			width: 20px;
