--- a/src/views/22_rules.html
+++ b/src/views/22_rules.html
@@ -237,6 +237,7 @@
                     </div>
                     <div class="editor mb-60">
                         <table class="table table--dropdown" id="table-1">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--4">Размер</th>
@@ -394,6 +395,7 @@
                         </table>
                         
                         <table class="table table--dropdown" id="table-2">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--4">Размер</th>
@@ -510,6 +512,7 @@
                         </table>
                         
                         <table class="table table--dropdown" id="table-3">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--2">Размер</th>
@@ -651,6 +654,7 @@
                     </div>
                     <div class="editor mb-60">
                         <table class="table table--dropdown" id="table-4">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--4">Размер</th>
@@ -807,6 +811,7 @@
                             </tbody>
                         </table>
                         <table class="table table--dropdown" id="table-5">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--4">Размер</th>
@@ -946,6 +951,7 @@
                     </div>
                     <div class="editor mb-60">
                         <table class="table table--dropdown" id="table-6">
+                            <caption class="table__caption mb-10">Заголовок</caption>
                             <thead>
                                 <tr>
                                     <th class="table__col table__col--4">Размер</th>
