--- a/src/blocks/modules/articles/articles.scss
+++ b/src/blocks/modules/articles/articles.scss
@@ -68,9 +68,9 @@
 			@include r(1200) {
 				width: calc(50% - 10px);
 			}
-			@include r(560) {
-				width: 100%;
-			}
+			// @include r(560) {
+			// 	width: 100%;
+			// }
 		}
 		&--25  {
 			width: calc(25% - 15px);
