--- a/src/blocks/modules/breadcrumbs/breadcrumbs.scss
+++ b/src/blocks/modules/breadcrumbs/breadcrumbs.scss
@@ -9,7 +9,7 @@
 			opacity: 0.7;
 		}
 		&--static {
-			color: $gray;
+			color: #b0b0b0;
 			flex-shrink: 1;
 			pointer-events: none;
 			text-overflow: ellipsis;
