--- a/src/blocks/modules/columns/columns.scss
+++ b/src/blocks/modules/columns/columns.scss
@@ -20,9 +20,9 @@
 			@include r(560) {
 				width: calc(100% / 12 * 6 - 10px);
 			}
-			@include r(360) {
-				width: 100%;
-			}
+			// @include r(360) {
+			// 	width: 100%;
+			// }
 		}
 		&--3 {
 			width: calc(100% / 12 * 3 - 10px);
@@ -64,6 +64,14 @@
 			width: calc(100% / 12 * 9 - 10px);
 			@include r(1200) {
 				width: 100%;
+			}
+		}
+		&--grow {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			@include r(1200) {
+				display: block;
 			}
 		}
 	}
