--- a/src/blocks/modules/editor/editor.scss
+++ b/src/blocks/modules/editor/editor.scss
@@ -26,7 +26,6 @@
 	h3 {
 		font-weight: bold;
 		font-size: rem(22);
-		clear: both;
 		// font-family: $font-title;
 		margin-bottom: 1rem;
 	}
@@ -35,14 +34,12 @@
 		font-size: rem(18);
 		// font-family: $font-title;
 		margin-bottom: 1rem;
-		clear: both;
 	}
 	h5 {
 		font-weight: bold;
 		font-size: rem(16);
 		// font-family: $font-title;
 		margin-bottom: 1rem;
-		clear: both;
 	}
 	strong, b {
 		font-weight: bold;
@@ -91,14 +88,16 @@
 	}
 	img {
 		display: block;
-		max-width: 100%;
-		width: auto;
+		// max-width: 100%;
+		width: 100%;
+		height: auto;
 		margin-bottom: 2rem;
 		margin-top: 2rem;
 	}
 	ul {
 		margin-bottom: 1em;
 		font-size: inherit;
+		overflow: hidden;
 		li {
 			position: relative;
 			padding-left: rem(22);
