--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -23,17 +23,33 @@
 		}
 	}
 	&__logo {
-		display: block;
+		display: inline-block;
 		width: fit-content;
-		margin-top: rem(45);
+		margin-right: rem(20);
+		&:last-of-type {
+			margin-right: 0;
+			@include r(1200) {
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
 		img {
 			height: rem(52);
 		}
+		&:hover {
+			opacity: 0.7;
+		}
 		@include r(1200) {
-			margin-top: 0;
+			display: block;
 			margin-left: auto;
 			margin-right: auto;
 		}
+	}
+	&__main-nav {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		flex-grow: 1;
 	}
 	&__nav {
 		columns: 2;
@@ -48,6 +64,9 @@
 		font-weight: 500;
 		margin-bottom: 1em;
 		text-decoration: none;
+		&:last-of-type {
+			margin-bottom: 0;
+		}
 		@include r(1200) {
 			display: none;
 		}
