--- a/src/blocks/modules/intro-slider/intro-slider.scss
+++ b/src/blocks/modules/intro-slider/intro-slider.scss
@@ -12,7 +12,8 @@
 		background-position: center;
 		color: $light;
 		height: 100%;
-		background-size: auto 100%;
+		// background-size: auto 100%;
+		background-size: cover;
 		@include r(1200) {
 			background-size: cover;
 			text-align: center;
