--- a/src/blocks/modules/news-card/news-card.scss
+++ b/src/blocks/modules/news-card/news-card.scss
@@ -9,13 +9,15 @@
 	&__thumb {
 		display: block;
 		margin-bottom: rem(25);
+		height: rem(280);
 		@include r(1200) {
 			margin-bottom: rem(20);
 		}
 		img {
 			display: block;
 			width: 100%;
-			height: auto;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 	&__title {
