--- a/src/blocks/modules/select/select.scss
+++ b/src/blocks/modules/select/select.scss
@@ -11,4 +11,13 @@
 	cursor: pointer;
 	transition: 0.3s all;
 	box-sizing: border-box;
+	background-image: url('../img/dropdown-icon.svg');
+	background-size: rem(16);
+	background-repeat: no-repeat;
+	background-position: center right rem(15);
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	&::-ms-expand {
+		display: none;
+	}
 }
