--- a/src/blocks/modules/table-btn/table-btn.scss
+++ b/src/blocks/modules/table-btn/table-btn.scss
@@ -9,7 +9,9 @@
 	cursor: pointer;
 	transition: 0.3s all;
 	border: none;
-	background: none; 
+	background: none;
+	@include r(1200) {
+		display: none;	}
 	&:hover {
 		opacity: 0.7;
 	}
