--- a/src/views/404.html
+++ b/src/views/404.html
@@ -1,1 +1,25 @@
-<h3>Page not found</h3>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<title>12. Требования к макетам 1</title>
+	@@include("../blocks/modules/head/head.html")
+</head>
+<body class="body">
+	<div id="page">
+		@@include("../blocks/modules/header/header.html")
+		<main class="main">
+			<section class="section section--none">
+				@@include("../blocks/modules/none/none.html")
+			</section>
+		</main>
+		<footer class="section section--footer">
+			<div class="container">
+				@@include("../blocks/modules/footer/footer.html")
+			</div>
+		</footer>
+		@@include("../blocks/modules/demo/demo.html")
+	</div>
+	<script src="js/main.js"></script>
+	<script src="js/vendor.js"></script>
+</body>
+</html>
