--- a/src/views/index.html
+++ b/src/views/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section section--light section--decor-top">
+            <section class="section section--light section--decor-front">
                 <div class="container">
                     <h2 class="title mb-80">
                         Нам доверяют
